add edit button

--- a/templates/customer_details.html
+++ b/templates/customer_details.html
@@ -7,8 +7,10 @@
 <body>
     <div id="header-placeholder"></div>
     <div class="container">
-        <h2>Customer Registration</h2>
+        <h2 id="form-title">Customer Registration</h2>
         <form id="custForm" class="form-group">
+            <input type="hidden" id="custId" value="">
+            
             <input type="text" id="cname" placeholder="Customer Name" required>
             <input type="text" id="cphone" placeholder="Contact Number" required>
             
@@ -18,7 +20,10 @@
             </select>
             
             <input type="date" id="bdate" required>
-            <button type="submit" class="btn-save">Add Customer</button>
+            <div class="btn-group">
+                <button type="submit" id="saveBtn" class="btn-save">Add Customer</button>
+                <button type="button" id="cancelEdit" style="display:none;" onclick="resetCustForm()">Cancel Edit</button>
+            </div>
         </form>
         
         <hr>
