--- a/templates/header.html
+++ b/templates/header.html
@@ -1,6 +1,6 @@
 <nav class="navbar">
-    <div class="logo">Rental Manager</div>
-    <div class="links">
+    <strong>Rental Manager</strong>
+    <div class="nav-links">
         <a href="/">Dashboard</a>
         <a href="/add-property">Add Property</a>
         <a href="/property-list">Property List</a>
@@ -8,3 +8,8 @@
         <a href="/billing">Billing</a>
     </div>
 </nav>
+
+<script src="https://cdnjs.cloudflare.com/ajax/libs/xlsx/0.18.5/xlsx.full.min.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf/2.5.1/jspdf.umd.min.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf-autotable/3.5.25/jspdf.plugin.autotable.min.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/qrcodejs/1.0.0/qrcode.min.js"></script>
