--- a/templates/property_list.html
+++ b/templates/property_list.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
+    <meta charset="UTF-8">
     <title>Property List</title>
     <link rel="stylesheet" href="/static/style.css">
 </head>
@@ -8,21 +9,19 @@
     <div id="header-placeholder"></div>
     <div class="container">
         <h2>Property List</h2>
-        
         <div class="toolbar">
             <input type="text" id="propSearchInput" placeholder="Search Property..." onkeyup="filterTable('propTable', 'propSearchInput')">
             <div class="export-btns">
                 <button onclick="downloadCSV('propTable', 'Property_List')" class="btn-edit">Export Excel</button>
-                <button onclick="downloadPDF('propTable', 'Property List Report')" class="btn-save">Export PDF</button>
+                <button onclick="downloadPDF()" class="btn-save">Export PDF</button>
             </div>
         </div>
-
         <table id="propTable">
             <thead>
                 <tr>
                     <th onclick="sortTable('propTable', 0)">Serial No. ↕</th>
                     <th onclick="sortTable('propTable', 1)">Property Name ↕</th>
-                    <th onclick="sortTable('propTable', 2)">Rent Price (₹) ↕</th>
+                    <th onclick="sortTable('propTable', 2)">Rent Price ↕</th>
                     <th onclick="sortTable('propTable', 3)">Status ↕</th>
                     <th style="text-align:right;">Action</th>
                 </tr>
@@ -30,15 +29,9 @@
             <tbody></tbody>
         </table>
     </div>
-
     <div id="qrModal" class="modal">
-        <div class="modal-content">
-            <span class="close" onclick="closeQR()">&times;</span>
-            <h3>Property QR Code</h3>
-            <div id="qrcode"></div>
-        </div>
+        <div class="modal-content"><span class="close" onclick="closeQR()">&times;</span><h3>Info</h3><div id="qrcode"></div></div>
     </div>
-
     <div id="footer-placeholder"></div>
     <script src="/static/script.js"></script>
 </body>
