--- a/templates/header.html
+++ b/templates/header.html
@@ -9,3 +9,5 @@
         <a href="/billing">Billing</a>
     </div>
 </nav>
+
+<script src="https://cdnjs.cloudflare.com/ajax/libs/qrcodejs/1.0.0/qrcode.min.js"></script>
