--- a/templates/footer.html
+++ b/templates/footer.html
@@ -5,6 +5,6 @@
             <span class="divider">|</span>
             <span><i class="fas fa-phone"></i> +91 78470 67218</span>
         </div>
-        <p>&copy; 2026 Rental Manager | Build with <strong>P suman patro</strong></p>
+        <p>&copy; 2026 Rental Manager | Build with 💚 by <strong>P Suman Patro</strong></p>
     </div>
 </footer>
